# AIMMS-Frontend

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  index-epcon.html  install.sh  pyproject.toml  setup.py
epcon_branding/: __init__.py  _version.py
epcon_branding/static/: BrandingOverride.js  branding.js
inventree_epcon_branding.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
