[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-epcon-branding"
version = "1.0.0"
description = "InvenTree plugin for Epcon AIMMS branding customization"
readme = "README.md"
authors = [
    {name = "Epcon", email = "admin@epcon.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["inventree", "plugin", "branding", "epcon", "aimms"]
dependencies = [
    "inventree>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/epcon/inventree-epcon-branding"
Repository = "https://github.com/epcon/inventree-epcon-branding"
"Bug Tracker" = "https://github.com/epcon/inventree-epcon-branding/issues"

[project.entry-points."inventree_plugins"]
EpconBrandingPlugin = "epcon_branding:EpconBrandingPlugin"

[tool.setuptools]
packages = ["epcon_branding"]

[tool.setuptools.package-data]
epcon_branding = ["static/*", "static/**/*"]
