[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-epcon-branding"
version = "1.0.0"
description = "InvenTree plugin for Epcon AIMMS branding"
authors = [{name = "Epcon", email = "admin@epcon.com"}]
requires-python = ">=3.9"
dependencies = ["inventree>=0.13.0"]

[tool.setuptools]
packages = ["epcon_branding"]

[tool.setuptools.package-data]
epcon_branding = ["static/*"]
